# avalon_bot

./: .gitignore  Cargo.toml  README.md
avalon_bot/: Cargo.toml
avalon_bot/src/: games.rs  main.rs  utils.rs
avalon_bot/src/avalon/: assassinate.rs  board.rs  characters.rs  config.rs  game.rs  lotl.rs  mod.rs  quest.rs  roles.rs  rounds.rs  start.rs  toggle_lotl.rs  vote.rs
avalon_bot/src/commands/: addme.rs  info.rs  ll.rs  mod.rs  ping.rs  rules.rs  start.rs  stop.rs  system_info.rs  test.rs  unpin.rs  uptime.rs
avalon_bot/src/hangman/: guess.rs  hangman_command.rs  mod.rs  random_words.rs  start.rs
command_data_derive/: Cargo.toml
command_data_derive/src/: enum_choices.rs  enum_data.rs  enum_option.rs  lib.rs  macros.rs  struct_data.rs  utils.rs
derive_test/: Cargo.toml
derive_test/src/: lib.rs
discorsd/: Cargo.toml
discorsd/src/: bot.rs  commands.rs  errors.rs  lib.rs  macros.rs  markup_extensions.rs  serde_utils.rs  utils.rs
discorsd/src/cache/: mod.rs  update.rs
discorsd/src/http/: channel.rs  guild.rs  interaction.rs  mod.rs  rate_limit.rs  routes.rs  user.rs
discorsd/src/http/model/: channel.rs  emoji.rs  guild.rs  ids.rs  interaction.rs  message.rs  mod.rs  permissions.rs  user.rs  voice.rs
discorsd/src/model/: channel.rs  commands.rs  emoji.rs  guild.rs  ids.rs  interaction.rs  message.rs  mod.rs  permissions.rs  user.rs  voice.rs
discorsd/src/shard/: dispatch.rs  intents.rs  mod.rs  model.rs
make_boards/: Cargo.toml
make_boards/src/: main.rs
src/: avalon2.rs  error.rs  games.rs  macros.rs  main.rs  utils.rs
src/avalon/: assassinate.rs  board.rs  characters.rs  config.rs  game.rs  lotl.rs  mod.rs  quest.rs  roles.rs  setup.rs  start.rs  vote.rs
src/commands/: addme.rs  components.rs  info.rs  ll.rs  mod.rs  ping.rs  rules.rs  start.rs  start_game.rs  stop.rs  system_info.rs  test.rs  unpin.rs  uptime.rs
src/coup/: mod.rs
src/hangman/: guess.rs  guess_letter.rs  guess_word.rs  hangman_command.rs  mod.rs  random_words.rs  start.rs
