[package]
name = "avalon_bot"
version = "0.1.0"
authors = ["Andrew-Schwartz <andrewschwartz59@gmail.com>"]
edition = "2021"

[dependencies]
discorsd = { path = "../discorsd/discorsd" }
command_data_derive = { path = "../discorsd/command_data_derive" }
once_cell = "1.7.2"
chrono = "0.4.19"
log = "0.4.14"
env_logger = "0.10.0"
futures = "0.3.14"
itertools = "0.10.0"
strum = { version = "0.24.1", features = ["derive"] }
rand = "0.8.3"
thiserror = "1.0.24"
image = "0.24.4"
imageproc = "0.23.0"
sysinfo = "0.29.2"

# for hangman
[dependencies.reqwest]
version = "0.11.3"
features = ["json"]

[dependencies.serde]
version = "1.0.125"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.64"
features = ["raw_value"]

[dependencies.tokio]
version = "1.5.0"
features = ["full"]
