[package]
name = "avalon_bot"
version = "0.1.0"
authors = ["Andrew-Schwartz <andrewschwartz59@gmail.com>"]
edition = "2021"

[dependencies]
discorsd = { path = "../discorsd/discorsd" }
command_data_derive = { path = "../discorsd/command_data_derive" }
once_cell = "1.18.0"
chrono = "0.4.22"
log = "0.4.15"
env_logger = "0.10.0"
futures = "0.3.28"
itertools = "0.11.0"
strum = { version = "0.25.0", features = ["derive"] }
rand = "0.8.5"
thiserror = "1.0.44"
image = "0.24.6"
imageproc = "0.23.0"
sysinfo = "0.29.7"
serde = "1.0.176"
serde_derive = "1.0.176"

# for hangman
[dependencies.reqwest]
version = "0.11.18"
features = ["json"]

[dependencies.serde_json]
version = "1.0.104"
features = ["raw_value"]

[dependencies.tokio]
version = "1.29.1"
features = ["full"]
