[package]
name = "avalon_bot"
version = "0.1.0"
authors = ["Andrew-Schwartz <andrewschwartz59@gmail.com>"]
edition = "2018"

[dependencies]
discorsd = { path = "../discorsd" }
command_data_derive = { path = "../command_data_derive" }
once_cell = "1.5.2"
chrono = "0.4.19"
log = "0.4.11"
env_logger = "0.8.2"
futures = "0.3.8"
itertools = "0.9.0"
strum = { version = "0.20.0", features = ["derive"] }
rand = "0.8.0"
thiserror = "1.0.23"
image = "0.23.12"
imageproc = "0.22.0"

# for hangman
[dependencies.reqwest]
version = "0.10.9"
features = ["json"]

[dependencies.serde]
version = "1.0.117"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.59"
features = ["raw_value"]

[dependencies.tokio]
version = "0.2.24"
features = ["full"]