[package]
name = "avalon_bot"
version = "0.1.0"
authors = ["Andrew-Schwartz <andrewschwartz59@gmail.com>"]
edition = "2018"

[dependencies]
discorsd = { path = "../discorsd" }
command_data_derive = { path = "../command_data_derive" }
once_cell = "1.7.2"
chrono = "0.4.19"
log = "0.4.14"
env_logger = "0.8.3"
futures = "0.3.14"
itertools = "0.10.0"
strum = { version = "0.20.0", features = ["derive"] }
rand = "0.8.3"
thiserror = "1.0.24"
image = "0.23.14"
imageproc = "0.22.0"
sysinfo = "0.17.2"

# for hangman
[dependencies.reqwest]
version = "0.11.3"
features = ["json"]

[dependencies.serde]
version = "1.0.125"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.64"
features = ["raw_value"]

[dependencies.tokio]
version = "1.5.0"
features = ["full"]
