[package]
name = "discorsd"
version = "0.1.0"
authors = ["Andrew-Schwartz <andrewschwartz59@gmail.com>"]
edition = "2018"

[dependencies]
command_data_derive = { path = "../command_data_derive" }
itertools = "0.9.0"
anyhow = "1.0.34"
serde_repr = "0.1.6"
bitflags = "1.2.1"
async-trait = "0.1.42"
base64 = "0.13.0"
rand = "0.7.3"
num_enum = "0.5.1"
log = "0.4.11"
env_logger = "0.8.2"
once_cell = "1.5.2"
regex = "1.4.2"
thiserror = "1.0.22"
dyn-clone = "1.0.3"
downcast-rs = "1.2.0"
array-init = "1.1.0"

[dependencies.tokio]
version = "0.2.24"
features = ["full"]

[dependencies.async-tungstenite]
default-features = false
features = ["tokio-runtime", "tokio-native-tls"]
version = "0.9.3"

[dependencies.futures]
version = "0.3.8"

[dependencies.reqwest]
version = "0.10.9"
features = ["json", "stream"]

[dependencies.serde]
version = "1.0.117"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.59"
features = ["raw_value"]

[dependencies.chrono]
version = "0.4.19"
features = ["serde"]

[dependencies.backoff]
version = "0.2.1"
features = ["tokio"]